force-app/main/default/objects/Reference_PEO_Exception_Request__c/Reference_PEO_Exception_Request__c.object-meta.xml
<CustomObject>
    <label>Reference PEO Exception Request</label>
    <nameField>
        <displayFormat>Exception-{00000}</displayFormat>
        <label>Exception ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference PEO Exception Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>