force-app/main/default/objects/Reference_PEO_Exception_Request__c/fields/Exception_Notes_Log__c.field-meta.xml
<CustomField>
    <fullName>Exception_Notes_Log__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Notes Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>