force-app/main/default/objects/Reference_PEO_Exception_Request__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed Deadline</fullName>
            </value>
            <value>
                <fullName>Paper Submission Exception</fullName>
            </value>
            <value>
                <fullName>Pass with Incomplete EEs.</fullName>
            </value>
            <value>
                <fullName>Prioritized Web Open</fullName>
            </value>
            <value>
                <fullName>Vouchers</fullName>
            </value>
            <value>
                <fullName>Web Close Date Extension</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
                <isActive>false</isActive>
                <label>Benefits</label>
            </value>
            <value>
                <fullName>Late Ancillary Benefit Enrollment</fullName>
                <isActive>false</isActive>
                <label>Late Ancillary Benefit Enrollment</label>
            </value>
            <value>
                <fullName>Late Medical Enrollment</fullName>
                <isActive>false</isActive>
                <label>Late Medical Enrollment</label>
            </value>
            <value>
                <fullName>Non-Standard Onboarding</fullName>
                <isActive>false</isActive>
                <label>Non-Standard Onboarding</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Payroll</fullName>
                <isActive>false</isActive>
                <label>Payroll</label>
            </value>
            <value>
                <fullName>Payroll &amp; Benefits</fullName>
                <isActive>false</isActive>
                <label>Payroll &amp; Benefits</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>