force-app/main/default/objects/Reference_PEO_Exception_Request__c/listViews/Open_Exception_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Exception_Requests</fullName>
    <columns>NAME</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Exception_Requested_By__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Request_Status__c</columns>
    <columns>Exception_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exception_Request_Status__c</field>
        <operation>equals</operation>
        <value>Open,Under Investigation</value>
    </filters>
    <filters>
        <field>Branch_Client_Number__c</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>Open Exception Requests</label>
    <sharedTo>
        <role>PEOBenefitsSupervisor</role>
        <role>PEONewBusinessContractualRep</role>
        <role>PEONewBusinessContractualSupervisor</role>
        <role>PEONewBusinessManager</role>
        <role>PEOOperationsManager</role>
        <role>PEOPayrollNCS</role>
    </sharedTo>
</ListView>